# magnifier

./: .gitignore  CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  MetaData.h.in  README.md
android/: AndroidManifest.xml
android/src/org/codeberg/danilov/magnifier/: MainActivity.java
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
